on-prem/ServiceMeshLite/manifest/nodeport/cic_vpx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cic-vpx
  labels:
    app: cic-vpx
spec: 
      serviceAccountName: cpx
      containers:
      - name: cic-vpx
        image: "quay.io/citrix/citrix-k8s-ingress-controller:1.8.19"
        args:
          - --ingress-classes
            vpx
          - --feature-node-watch
            false
        imagePullPolicy: IfNotPresent
